# sdl-dino

./: .gitignore  CMakeLists.txt  LICENSE  README.md  linker.ld
script/: gen_mem.sh  mem2coe.py  ram.mem  ram0.coe  ram1.coe  ram2.coe  ram3.coe  rom.coe  rom.mem  split.py  toramcoe.cpp
src/: cactus.cpp  cactus.h  entity.h  ground.cpp  ground.h  imgs.h  main.cpp  score.cpp  score.h  trex.cpp  trex.h  utils.cpp  utils.h
src/assets/: cloud.h
src/lib/: device.cpp  device.h  mem.cpp  mem.h
